# Stacy-NN

./: CMakeLists.txt  README.md
Neural Network/: main.cpp  main.h
